grammar/test/corpus/errors/e202_2.txt
================================================================================
E202_2 - E202: Missing form type after @
================================================================================
@UTF8
@Begin
@Participants:	CHI Target_Child
*CHI:	dog@j .
@End

--------------------------------------------------------------------------------

(source_file (full_document (utf8_header (newline)) (begin_header (newline)) (line (participants_header (participants_prefix) (header_sep (colon) (tab)) (participants_contents (participant code: (speaker) (whitespaces) (participant_word))) (newline))) (line (utterance (main_tier (star) speaker: (speaker) (colon) (tab) (tier_body content: (contents (content_item (base_content_item (word_with_optional_annotations word: (standalone_word (word_body (word_segment))))))) (ERROR (UNEXPECTED 'j') (space)) ending: (utterance_end (period) (newline)))))) (end_header (newline))))
