grammar/test/corpus/errors/e311.txt
================================================================================
E311 - E311: Failed to parse utterance
================================================================================
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Child
@ID:	eng|corpus|CHI|||||Child|||
*CHI:	[: unclosed replacement [* error] .
@End

--------------------------------------------------------------------------------

(source_file
  (full_document
    (utf8_header
      (newline))
    (begin_header
      (newline))
    (line
      (languages_header
        (languages_prefix)
        (header_sep
          (colon)
          (tab))
        (languages_contents
          (language_code))
        (newline)))
    (line
      (participants_header
        (participants_prefix)
        (header_sep
          (colon)
          (tab))
        (participants_contents
          (participant
            code: (speaker)
            (whitespaces)
            (participant_word)))
        (newline)))
    (line
      (id_header
        (id_prefix)
        (header_sep
          (colon)
          (tab))
        (id_contents
          (id_languages
            (languages_contents
              (language_code)))
          (pipe)
          (id_corpus)
          (pipe)
          (id_speaker)
          (pipe)
          (pipe)
          (pipe)
          (pipe)
          (pipe)
          (id_role)
          (pipe)
          (pipe)
          (pipe))
        (newline)))
    (line
      (utterance
        (main_tier
          (star)
          speaker: (speaker)
          (colon)
          (tab)
          (tier_body
            content: (contents
              (content_item
                (base_content_item
                  (word_with_optional_annotations
                    word: (standalone_word
                      (word_body
                        (MISSING word_segment)))))))
            (ERROR
              (left_bracket)
              (colon)
              (whitespaces)
              (standalone_word
                (word_body
                  (word_segment)))
              (whitespaces)
              (standalone_word
                (word_body
                  (word_segment)))
              (whitespaces)
              (error_marker_annotation)
              (space))
            ending: (utterance_end
              (period)
              (newline))))))
    (end_header
      (newline))))
